--- a/graphieros_journal/graphieros_journal.css
+++ b/graphieros_journal/graphieros_journal.css
@@ -8,7 +8,7 @@ html,body
 } 
 
 html {
-    background: radial-gradient(at top, rgb(18,43,18), black);
+    background: radial-gradient(at top, rgb(255,255,255), rgb(240,240,240));
 } 
 
  
@@ -27,8 +27,7 @@ header{
     top: 0;
     left:0;
     width:100vw;
-    background: black;
-    border-bottom: 1px solid rgb(18,43,28);
+    background: rgb(240,240,240);
     line-height:50px;
     border-radius:0 0 100% 100%;
     height:50px;
@@ -68,13 +67,11 @@ span.d{
 
 #svg_title{
     width:320px;
-    height:320px;
+    height:250px;
     margin: 0 auto;
     margin-bottom:20px;
     margin-top:100px;
-    background: black;
-    border-top:1px solid rgb(78, 122, 52);
-    border-radius:100%;
+    background: transparent;
     display: grid;
     justify-items:center;
 }
@@ -91,7 +88,7 @@ span.d{
     width:100%;
     display: grid;
     justify-items: center;
-}
+} 
 
 .linear_wrapper{
     margin-left:50%;
