--- a/logo/logo.css
+++ b/logo/logo.css
@@ -11,6 +11,15 @@ body {
     --c: rgb(100,130,150);
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 .main {
     margin: 0 auto;
     margin-top:150px;
@@ -113,7 +122,33 @@ span#motto {
     color: rgb(100,130,150);
 }
 
-/* gallery component */
+footer{
+    display: grid;
+    margin:0 auto;
+    justify-items:center;
+    width:100%;
+    max-width:600px;
+    text-align:center;
+    height:100px;
+    border-top: 1px solid rgb(156, 171, 180);
+    box-sizing: border-box;
+    padding:20px;
+    font-family: 'Oswald', sans-serif;
+    color: var(--c);
+}
+
+footer span {
+    font-size:0.7em;
+}
+
+/* images */
+
+.background_img {
+    display: block;
+    margin:0 auto;
+    width:90vw;
+    max-width:800px;
+}
 
 .gallery {
     display: grid;
