--- a/logo/logo.css
+++ b/logo/logo.css
@@ -9,6 +9,7 @@ body {
 
 :root {
     --c: rgb(100,130,150);
+    --f: 'Lobster', cursive;
 }
 
 a {
@@ -179,13 +180,128 @@ footer span {
     box-shadow: 0px 2px 20px -10px rgb(77,55,33);
 }
 
-/* glyphs styling override*/
+
+.category{
+    display: grid;
+    align-items:center;
+    grid-column: 1/span 3;
+    height:60px;
+    font-family: var(--f);
+    width:100%;
+    font-size:2.5em;
+    text-align:center;
+    color:white;
+    text-shadow: 1px 1px black;
+    margin:0 auto;
+    max-width:760px;
+    margin-bottom:40px;
+    border-radius:30px 30px 2px 2px;
+}
+
+#category_0 {
+    background: radial-gradient(at top, white, rgb(100,130,150));
+    border:1px solid rgb(100,130,150);
+}
+
+#category_1 {
+    background: radial-gradient(at top, white, rgb(61,97,50));
+    border:1px solid rgb(61,97,50);
+}
+
+#category_2 {
+    background: radial-gradient(at top, white, rgb(112,73,67));
+    border:1px solid rgb(112,73,67);
+}
+
+#category_3 {
+    background: radial-gradient(at top, white, rgb(255,100,50));
+    border:1px solid rgb(255,100,50);
+    color: black;
+    text-shadow: none;
+}
+
+/* showcase modal */
+
+.showcase {
+    z-index:101;
+    display: none;
+    position: fixed;
+    margin: 0 auto;
+    height:500px;
+    width:600px;
+    background: white;
+    border-radius:3px;
+    box-shadow: 0px 0px 20px -5px grey;
+    top:110px;
+    left:50%;
+    transform: translateX(-50%);
+    opacity:0;
+    transition: opacity 0.5s ease;
+}
+
+#standard_laptop_container{
+    width:100%;
+    display: grid;
+    justify-items:center;
+}
+
+#standard_laptop_container img {
+    width:90%;
+}
+
+#standard_laptop_sticker_container{
+    display:block;
+    position: absolute;
+    margin-top: 50%;
+    margin-left:50%;
+    transform: translate(60%,-110%);
+    height:80px;
+    width:80px;
+    border-radius:100%;
+    perspective:300px;
+}
+
+svg#temp_svg{
+    border-radius:100% !important;
+    height:100% !important;
+    width:100% !important;
+    transform-style:preserve-3d !important;
+    transform: rotateY(45deg) rotateX(25deg) !important;
+}
+
+#quit_modal{
+    height:50px;
+    width:50px;
+    display:grid;
+    align-items:center;
+    justify-items:center;
+    position: absolute;
+    margin-left:50%;
+    transform: translate(-50%);
+    bottom:-25px;
+    background: rgb(153, 17, 17);
+    border-radius:100%;
+    box-shadow: 0 -5px 10px -3px grey;
+    opacity: 0.75;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+}
+
+#quit_modal:hover {
+    opacity:1;
+}
+
+
+
 
 @media screen and (max-width: 800px) {
     .gallery {
         grid-template-columns: repeat(2,1fr);
         grid-gap:60px;
         max-width:500px;
+    }
+    .category{
+        max-width:460px;
     }
 }
 
@@ -223,4 +339,45 @@ footer span {
         font-size:5em;
     }
 
+    .category {
+        max-width: 250px;
+        font-size:2em;
+        margin-bottom:50px;
+    }
+
+    .showcase {
+        width:90%;
+        height:350px;
+    }
+
+    #standard_laptop_sticker_container{
+        transform: translate(65%,-110%);
+        height:60px;
+        width:60px;
+    }
+
+}
+
+@media screen and (max-width: 450px) {
+    #standard_laptop_sticker_container{
+        transform: translate(35%,-100%);
+        height:60px;
+        width:60px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    #standard_laptop_sticker_container{
+        transform: translate(30%,-100%);
+        height:60px;
+        width:60px;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    #standard_laptop_sticker_container{
+        transform: translate(30%,-100%);
+        height:50px;
+        width:50px;
+    }
 }
