--- a/gstix/src/Item/Item.css
+++ b/gstix/src/Item/Item.css
@@ -14,6 +14,10 @@
     box-shadow: 0px 2px 20px -10px rgb(77,55,33);
 }
 
+.molecule_executive{
+    stroke: black;
+}
+
 
 @media screen and (max-width: 840px) {
     .gallery_item{
