green section updated

--- a/gstix/src/Gallery/Gallery.css
+++ b/gstix/src/Gallery/Gallery.css
@@ -60,7 +60,7 @@
     background: radial-gradient(at top, white,var(--green));
 }
 
-#Green_cllection p {
+#Green_collection p {
     color: var(--green);
 }
 
