--- a/gstix/src/Gallery/Gallery.css
+++ b/gstix/src/Gallery/Gallery.css
@@ -99,6 +99,24 @@
     box-shadow: 0px 0px 10px rgba(77, 53, 33, 0.55) !important;
 }
 
+#quit_button{
+    display: block;
+    right: -25px;
+    top: -25px;
+    position: absolute;
+    opacity: 0.75;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+}
+
+#quit_button svg {
+    box-shadow: 0 5px 10px grey;
+}
+
+#quit_button:hover {
+    opacity:1;
+}
+
 
 @media screen and (max-width: 840px) {
     .gallery_title{
@@ -131,5 +149,31 @@
     .gallery svg {
         width: 250px !important;
         height: 250px ! important;
+    }
+    #modal_showcase{
+        width:400px !important;
+    }
+}
+
+@media screen and (max-width: 414px) {
+
+    #modal_showcase{
+        width:350px !important;
+    }
+}
+
+
+@media screen and (max-width: 375px) {
+
+    #modal_showcase{
+        width:280px !important;
+    }
+}
+
+@media screen and (max-width: 320px) {
+
+    #modal_showcase{
+        width:250px !important;
+        height:400px !important;
     }
 }
