--- a/reactversion/source/src/containers/App.css
+++ b/reactversion/source/src/containers/App.css
@@ -1,11 +1,11 @@
 :root{
-    --t0: rgb(255, 138, 117);
+    --t0: rgb(255, 176, 162);
     --t : tomato;
     --t1: rgb(180, 67, 48);
-    --c0: rgb(158, 185, 235);
+    --c0: rgb(201, 212, 235);
     --c : cornflowerBlue;
     --c1: rgb(59, 103, 184);
-    --g0: rgb(255, 239, 146);
+    --g0: rgb(255, 244, 184);
     --g : gold;
     --g1: rgb(168, 143, 0);
 }
@@ -32,21 +32,28 @@
     margin-top:50%;
     filter: drop-shadow(0 0px 2px black);
     animation: spin 6s cubic-bezier(.8, 0, .1, 1);
-    animation-duration: 2s;
+    animation-duration: 1s;
     transform:translate(-50%,-50%);
     transform-origin: center center;
+    /* z-index:1; */
 }
 
 @keyframes spin{
     0% {
-        transform: translate(-50%,-50%) rotate(0deg);
+        transform: translate(-50%,-50%) rotate(0deg) rotateX(-60deg) rotateY(60deg);
         height:0%;
         width:0%;
+        opacity:1;
+        perspective:100px;
+        transform-style: preserve-3d;
     }
     100% {
-        transform:translate(-50%,-50%) rotate(360deg);
+        transform:translate(-50%,-50%) rotate(360deg) rotateX(0deg) rotateY(0deg);
         height:100%;
         width:100%;
+        opacity:1;
+        perspective:200px;
+        transform-style: preserve-3d;
     }
 }
 
@@ -54,20 +61,114 @@
     display: block;
     height:70px;
     width:70px;
-    background: rgba(255, 0, 0, 0.5);
     border-radius:100%;
     position: absolute;
+    cursor:pointer;
+    box-sizing: border-box;
+    border:2px solid white;
+    transition: box-shadow 0.3s ease;
+    z-index:10;
 }
+
+.menuCategory:hover{
+    box-shadow: 0 0 10px black !important;
+}
+
 
 #menuCategoryBio{
     margin-top: 50%;
-    transform: translateY(-55%);
+    margin-left: 50%;
+    transform: translate(-253%, -54%);
+    background: radial-gradient(at right, white, var(--g0), rgba(255, 217, 0, 0.5), rgba(168, 143, 0, 0.6));
+    box-shadow: 2px 0 10px -5px black;
+    animation: spinBall 0.3s cubic-bezier(.8, 0, .1, 2);
+}
+
+#menuCategoryPorfolio{
+    margin-top: 50%;
+    margin-left: 50%;
+    transform: translate(45%,-225%);
+    background: radial-gradient(at bottom left, white,var(--c0), rgba(100,149,237,0.5), rgba(59,103,184,0.6));
+    box-shadow: -2px 2px 10px -5px black;
+    animation: spinBall 0.5s cubic-bezier(.8, 0, .1, 2);
+}
+
+#menuCategoryGraphieros{
+    margin-top: 50%;
+    margin-left: 50%;
+    transform: translate(45%,118%);
+    background: radial-gradient(at top left, white, var(--t0), rgba(255,99,71,0.5), rgba(180,67,48,0.6));
+    box-shadow: -2px -2px 10px -5px black;
+    animation: spinBall 0.8s cubic-bezier(.8, 0, .1, 2);
+}
+
+.menuClicked{
+    display: block;
+    position: fixed;
+    bottom:0;
+    right:0;
+    height: 100px;
+    width:100px;
+    background:transparent;
+    cursor:pointer;
+    border-radius:100%;
+}
+
+.menuClicked:first-child  div > svg{
+    width:100%;
+    height:100%;
+    position: absolute;
+    right:0;
+    filter: drop-shadow(0 0px 1px black);
+    animation-duration: 2s;
+    transform-origin: center center;
+    animation: toMiniMenu;
+    animation-duration: 0.3s;
+}
+
+@keyframes toMiniMenu {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.menuClicked .menuCategory{
+    display: none;
+}
+
+/* hack to compensate my inability to manage states*/
+#resetMenu{
+    display: block;
+    z-Index:200;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    height:100px;
+    width:100px;
+    background: transparent;
+    border-radius:100%;
+    cursor: pointer;
+}
+
+@keyframes spinBall {
+    0%{
+        height:0px;
+        width:0px;
+    }
+    100%{
+        height:70px;
+        width:70px;
+    }
 }
 
 @media screen and (max-width: 415px) {
     .menuInitial{
         height: 300px;
         width:300px;
+        transform: translate(-40%,-50%);
     }
 }
 
