--- a/reactversion/source/src/components/SubMenuContent/SubMenuContent.css
+++ b/reactversion/source/src/components/SubMenuContent/SubMenuContent.css
@@ -43,28 +43,95 @@
     }
 }
 
-.bioDoList {
+#fractalBioTitleWrapper {
+    display: block;
+    position: absolute;
+    margin-left: -100px;
+    margin-top:-30px;
+}
+
+.bioDoListWrapper{
+    display: block;
+    position:relative;
+    top: 250px;
+    margin:0 auto;
+    max-width:350px;
+    text-align:right;
+    box-sizing: border-box;
+    padding-right:92px;
+}
+
+#bioDoList0,
+#bioDoList1,
+#bioDoList2 {
     display: block;
     position: relative;
     margin:0 auto;
-    margin-top: 300px;
     width: 100%;
-    max-width:300px;
     box-sizing: border-box;
-    padding-left: 150px;
     font-family: 'Roboto', sans-serif;
     color: var(--gText);
+    opacity:1;
+}
+
+#bioDoList0 {
+    margin-top: 20px;
+    padding-left:0;
+    animation: dropTop 0.5s ease;
+}
+
+#bioDoList1 {
+    margin-top:20px;
+    padding-left:0;
+    animation: appear 0.8s ease-in;
+}
+
+#bioDoList2 {
+    margin-top:20px;
+    padding-left:0;
+    animation: appear 1.1s ease-in;
+}
+
+@keyframes dropTop {
+    0%{
+        opacity:0;
+        transform: translateY(-100px);
+    }
+
+    100%{
+        transform: translateY(0px);
+        opacity:1;
+        margin-top:20px;
+    }
+}
+
+@keyframes appear {
+    0%{
+        opacity:0;
+    }
+
+    100%{
+        opacity:1;
+    }
 }
 
 span.spanSmall{
     font-size: 0.6em;
 }
 
-.fractalBio0 svg {
+.fractalBio0 svg,
+.fractalBio1 svg,
+.fractalBio2 svg {
     height:30px !important;
     width:30px !important;
     animation: none !important;
-    filter: none !important;
+}
+
+@media screen and (max-width:800px) {
+    .bioDoList {
+        margin-top: 250px;
+        padding-left: 80px;
+    }
 }
 
 @media screen and (max-width: 415px) {
@@ -72,16 +139,104 @@ span.spanSmall{
     .bioDoTitle{
         top:100px;
         width:100vw;
-        max-width:300px;
+        max-width:250px;
         margin: 0 auto;
         font-family: 'Megrim', cursive;
         text-align:center;
         font-size: 2em;
     }
 
+    @keyframes blurTitle{
+        0% {
+            max-width:200px;
+            opacity:0;
+            text-shadow: -20px 0px 20px black;
+        }
+        100%{
+            max-width:250px;
+            opacity:1;
+            text-shadow: none;
+        }
+    }
+
+    #fractalBioTitleWrapper {
+        display: block;
+        position: absolute;
+        margin-left: -50px;
+        margin-top:-100px;
+    }
+
+    .bioDoListWrapper {
+        top: 140px;
+        text-align:left;
+        padding-right:0;
+        padding-left: 96px;
+    }
+
+    #bioSoList0,
+    #bioDoList1,
+    #bioDoList2 {
+        margin-top: 10px;
+    }
+
 }
 
 @media screen and (max-width: 320px) {
+    .bioDoTitle{
+        top:70px;
+    }
 
+    #fractalBioTitleWrapper svg{
+        height:40px !important;
+        width:40px !important;
+        margin-left:30px !important;
+        margin-top: 40px !important;
+    }
+
+    .bioDoListWrapper {
+        top: 100px;
+        text-align:left;
+        padding-right:0;
+        padding-left: 81px;
+    }
+}
+
+@media screen and (min-height: 736px) {
+    #bioSoList0,
+    #bioDoList1,
+    #bioDoList2 {
+        margin-top: 30px;
+    }
+}
+
+@media screen and (min-height: 600px) and (max-width: 600px) {
+
+    .bioDoTitle{
+        top:100px;
+        max-width:250px;
+    }
+
+    @keyframes blurTitle{
+        0% {
+            max-width:200px;
+            opacity:0;
+            text-shadow: -20px 0px 20px black;
+        }
+        100%{
+            max-width:250px;
+            opacity:1;
+            text-shadow: none;
+        }
+    }
+
+    .bioDoListWrapper {
+        top: 100px;
+    }
+
+    #bioSoList0,
+    #bioDoList1,
+    #bioDoList2 {
+        margin-top: 10px;
+    }
 }
 
