painting gallery done

--- a/reactversion/source/src/components/SubMenuContent/SubMenuContent.css
+++ b/reactversion/source/src/components/SubMenuContent/SubMenuContent.css
@@ -1,7 +1,6 @@
 .bioDoOn,
 .bioParcoursOn,
-.bioOutilOn,
-.peintureOn{
+.bioOutilOn{
     /* z-index:-1; */
     display: block;
     position: fixed;
